fix: изменить У класса LinkedList есть метод removeFirst() - он удаляет первый элемент списка